[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/Sceens/GolemCreation.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Golem.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Sceens/TitleScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GUI.gd" type="Script" id=5]

[sub_resource type="Animation" id=3]
resource_name = "FadeBackIn"
tracks/0/type = "value"
tracks/0/path = NodePath("BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "StartAnimation"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BlackScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Main" type="Node"]

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Golem" parent="Game" instance=ExtResource( 2 )]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionLayer" type="CanvasLayer" parent="GUI"]

[node name="BlackScreen" type="ColorRect" parent="GUI/TransitionLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionPlayer" type="AnimationPlayer" parent="GUI/TransitionLayer"]
autoplay = "StartAnimation"
anims/FadeBackIn = SubResource( 3 )
anims/FadeToBlack = SubResource( 1 )
anims/StartAnimation = SubResource( 2 )

[node name="TitleScreen" parent="GUI" instance=ExtResource( 4 )]

[node name="GolemCreation" parent="GUI" instance=ExtResource( 1 )]
visible = false

[connection signal="startGame" from="GUI/TitleScreen" to="GUI" method="_on_TitleScreen_startGame"]
[connection signal="generate_golem" from="GUI/GolemCreation" to="Game" method="_on_GolemCreation_generate_golem"]
